<resources>
    <string name="app_name">DivingLogBook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="drawer_array">
        <item>Log Book</item>
        <item>Statistics</item>
        <item>Load new dives</item>
    </string-array>

    <string name="drawer_log_book">Log Book</string>
    <string name="drawer_statistics">Statistics</string>
    <string name="drawer_load_new_dives">Load new dives</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="title_activity_dive_summary_edit">Edit Dive</string>

    <string-array name="objective_name">
        <item>Exploration</item>
        <item>Technical</item>
    </string-array>

    <string-array name="bottom_temperature_unit">
        <item>C°</item>
        <item>F</item>
    </string-array>

    <string name="comma">,</string>

    <!-- Dive Summary -->
    <string name="dive_summary_general_section_title">General</string>
    <string name="dive_summary_conditions_section_title">Conditions</string>
    <string name="dive_summary_summary_section_title">Summary</string>
    <string name="dive_summary_comments_section_title">Comments</string>
    <string name="dive_summary_hint_date">Date</string>
    <string name="dive_summary_hint_site">Site</string>
    <string name="dive_summary_hint_town">Town</string>
    <string name="dive_summary_hint_country">Country</string>
    <string name="dive_summary_hint_buddy">Buddy name</string>
    <string name="dive_summary_hint_instructor">Instructor</string>
    <string name="dive_summary_hint_bottom_temperature">Bottom temperature</string>
    <string name="dive_summary_hint_duration">Duration</string>
    <string name="dive_summary_hint_max_depth">Max depth</string>
    <string name="dive_summary_hint_time_in">Time in</string>
    <string name="dive_summary_hint_time_out">Time out</string>
    <string name="dive_summary_hint_deco_meters">meters</string>
    <string name="dive_summary_hint_deco_minutes">minutes</string>

    <!-- Dive chart -->
    <string name="dive_chart_depth_graph_section_title">Depth graph</string>
    <string name="dive_chart_temperature_graph_section_title">Temperature graph</string>

    <!-- Dive equipment -->
    <string name="dive_equipment_tank_mixture_air">AIR</string>

    <string name="oxygen_symbol">02</string>
    <string name="nitrogen_symbol">N2</string>
    <string name="percent_symbol">%</string>

    <string-array name="equipment_suit_type">
        <item>Dry</item>
        <item>Semi-dry</item>
    </string-array>

    <string-array name="equipment_tank_type">
        <item>Simple</item>
        <item>Twin</item>
    </string-array>

    <string-array name="equipment_tank_mixture">
        <item>Air</item>
        <item>Nitrox</item>
        <item>Trimix</item>
        <item>Heliox</item>
    </string-array>

    <!-- Dive equipment add item list -->
    <string-array name="dive_equipment_add_item_list">
        <item>Tank</item>
        <item>Suit</item>
        <item>Weight</item>
    </string-array>

    <!-- Layout add dive -->
    <string name="layout_create_dive_create_a_dive">Create a dive</string>

    <!-- Icons -->
    <string name="ic_buddy">Buddy icon</string>
    <string name="ic_calendar">Calendar icon</string>
    <string name="ic_depth">Depth icon</string>
    <string name="ic_duration">Duration icon</string>
    <string name="ic_instructor">Instructor icon</string>
    <string name="ic_map_marker">Map marker icon</string>
    <string name="ic_menu_add">Add icon</string>
    <string name="ic_target">Target icon</string>
    <string name="ic_thermometer">Thermometer icon</string>
    <string name="ic_visibility">Visibility icon</string>
    <string name="ic_decompression">Decompression icon</string>
    <string name="title_activity_dive_equipement_edit">DiveEquipementEditActivity</string>
    <string name="title_activity_dive_equipment_tank_edit">DiveEquipmentTankEditActivity</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>



    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>

</resources>
