<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:weightSum="6">

            <LinearLayout
                android:layout_height="0dp"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/diveChartDepthGraphSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/dive_chart_depth_graph_section_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/white" />

                <com.mnchapel.divinglogbook.LineGraph
                    android:id="@+id/diveChartDepthLineGraph"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_height="0dp"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/diveChartTemperatureGraphSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/dive_chart_temperature_graph_section_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/white" />

                <com.mnchapel.divinglogbook.LineGraph
                    android:id="@+id/diveChartTemperatureLineGraph"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <!-- Duration -->
                <ImageView
                    android:id="@+id/diveChartDurationIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/ic_duration"
                    android:src="@drawable/ic_duration_white" />

                <TextView
                    android:id="@+id/diveChartDurationValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black" />

                <!-- Depth -->
                <ImageView
                    android:id="@+id/diveChartDepthIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/ic_duration"
                    android:src="@drawable/ic_depth_white" />

                <TextView
                    android:id="@+id/diveChartDepthValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <!-- Time -->
                <ImageView
                    android:id="@+id/diveChartTimeIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/ic_duration"
                    android:src="@drawable/ic_time_white" />

                <TextView
                    android:id="@+id/diveChartTimeValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black" />

                <!-- Bottom temperature -->
                <ImageView
                    android:id="@+id/diveChartBottomTemperatureIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/ic_duration"
                    android:src="@drawable/ic_thermometer_white" />

                <TextView
                    android:id="@+id/diveChartBottomTemperatureValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>

</LinearLayout>
